--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -797,11 +797,11 @@ margin-left: 38px;
 		
 	  
 		  <p>If you are an <strong>affected owner</strong> of a residential property in Canada on December 31, <strong>you must file</strong> an Underused Housing Tax return for the calendar year.</p>
-		 <p>You still must file a return even if your ownership of the property qualifies for an exemption and you do not owe any tax.</p>
+		 <p>You must still file a return even if your ownership of the property qualifies for an exemption and you do not owe any tax.</p>
 		
 
 	        <h2>Filling out the return</h2>
-<p>Follow the steps below to help you fill out the sections of the return. </p>
+<p>Follow the steps below to help you fill out the sections of your return. </p>
 <h3>What return form to use</h3>
 <ul class="fa-ul">
 <li><span class="far fa-file-alt fa-lg fa-li"></span><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/uht-2900.html" target="_blank">UHT-2900, Underused Housing Tax Return and Election Form</a></li>
@@ -902,7 +902,8 @@ margin-left: 38px;
 
 	
 	<li><h3>Part 3 - Multiple residential properties</h3>
-<p>If you are an affected owner who owns two or more residential properties in Canada on December 31, you must file a separate Underused Housing Tax return for each property.</p>
+<p>This section only applies to <strong>individuals</strong> who are not Canadian citizens or permanent residents.</p>
+		<p>If you own more than one residential property in Canada on December 31, you must file a separate return for each property.</p>
 </li>
 	<li><h3>Part 4 & 5 - Exemptions</h3>
 <p>To qualify for the exemption for primary place of residence, or the exemption for qualifying occupancy, you must file an election by completing the sections.</p>
