--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -902,9 +902,37 @@ margin-left: 38px;
 
 	
 	<li><h3>Part 3 - Multiple residential properties</h3>
-<p>This section only applies to <strong>individuals</strong> who are not Canadian citizens or permanent residents.</p>
-		<p>If you own more than one residential property in Canada on December 31, you must file a separate return for each property.</p>
+<p>This section only applies to <strong>individuals</strong> who are not Canadian citizens or permanent residents, and who own more than one residential property.</p>
+		<details>
+			<summary>Section 1 - Multiple properties</summary>
+			<p>If you own more than one residential property in Canada on December 31, you must file a separate return for each property.</p>
+		</details>
+		
+		<details>
+			<summary>Section 2 – Election to designate a residential property</summary>
+			<p>Yes to line 300</p>
+			<p>No to line 310</p>
+			<p>Select either yes or no: Electing that you as the owner, designate the residential property (completed in part 2) as either a primary place of residence or for qualifying occupancy.</p>
+			<p>You must fill out this section to be eligible for an exemption.</p>
+		</details>
+
+
+		<details>
+			<summary>Section 3 – Joint election to designate a residential property</summary>
+			<p>Yes to line 300</p>
+			<p>Select yes or no: Electing that both you and your spouse or common-law partners, as the owners, designate the residential property (completed in part 2) as either a primary place of residence or for qualifying occupancy.</p>
+			<p>You must fill out this section to be eligible for an exemption.</p>
+		</details>
 </li>
+
+
+
+
+
+
+
+
+	
 	<li><h3>Part 4 & 5 - Exemptions</h3>
 <p>To qualify for the exemption for primary place of residence, or the exemption for qualifying occupancy, you must file an election by completing the sections.</p>
 		<p>Filing an election for the exemption is done within the UHT return.</p>
