--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -922,6 +922,7 @@ margin-left: 38px;
 			<p>Yes to line 300</p>
 			<p>Select yes or no: Electing that both you and your spouse or common-law partners, as the owners, designate the residential property (completed in part 2) as either a primary place of residence or for qualifying occupancy.</p>
 			<p>You must fill out this section to be eligible for an exemption.</p>
+			<p> To constitute a valid joint election, your spouse or common-law partner must elect to designate the same residential property for the calendar year in an UHT return for a residential property they own. The election is incomplete until the CRA receives your spouse or common-law partner's portion of the election on their UHT return designating the same residential property</p>
 		</details>
 </li>
 
