--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -934,15 +934,32 @@ margin-left: 38px;
 
 
 	
-	<li><h3>Part 4 & 5 - Exemptions</h3>
-<p>To qualify for the exemption for primary place of residence, or the exemption for qualifying occupancy, you must file an election by completing the sections.</p>
-		<p>Filing an election for the exemption is done within the UHT return.</p>
+	<li><h3>Part 4 - Exemption for primary place of residence</h3>
+<p>To qualify for the exemption for primary place of residence, you must file the election in Part 3, Section 2 or 3.</p>
+		
 </li>
 
+
+	
+	<li><h3>Part 5 - Exemption for qualifying occupancy</h3>
+<p>To qualify for the exemption for qualifying occupancy, you must file the election in Part 3, Section 2 or 3.</p>
+		
+</li>
+
+
+	
+		<li><h3>Part 6 - Other exemptions</h3>
+<p>Content</p>
+</li>
+
+
+	
 	<li><h3>Part 7 - Fair market value (FMV) election</h3>
 <p>To calculate the tax you owe using the fair market value of a residential property, you must file an election by completing the section.</p>
 <p>An owner electing to use fair market value has to get an appraisal of the property. The fair market value of your residential property must be determined by an accredited, professional, real estate appraiser operating at arm’s length to the owner. The intended use of the appraisal report must be to help in the administration of the Underused Housing Tax Act.</p>
 	</li>
+
+	
 
 	
 	<li><h3>Part 8 - Calculation of tax payable</h3>
