--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -797,6 +797,7 @@ margin-left: 38px;
 		
 	  
 		  <p>If you are an <strong>affected owner</strong> of a residential property in Canada on December 31, <strong>you must file</strong> an Underused Housing Tax return for the calendar year.</p>
+		<p>If you own more than one residential property in Canada, you must file a separate return for each property</p>
 		 <p>You must still file a return even if your ownership of the property qualifies for an exemption and you do not owe any tax.</p>
 		
 
@@ -807,7 +808,7 @@ margin-left: 38px;
 <li><span class="far fa-file-alt fa-lg fa-li"></span><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/uht-2900.html" target="_blank">UHT-2900, Underused Housing Tax Return and Election Form</a></li>
 </ul>
 
-
+<br>
 		 
 <ol class="lst-stps stps-strpd">
 <li><h3>Part 1 - Information about the owner </h3>
@@ -907,13 +908,13 @@ margin-left: 38px;
 			<summary>Section 1 - Multiple properties</summary>
 			<p>If you own more than one residential property in Canada on December 31, you must file a separate return for each property.</p>
 		</details>
-		
+		<p>If you choose to make an election - You may only elect to designate one residential property for the purposes of subsection 6(10) of the UHTA for a calendar year. You cannot elect to designate different residential properties to claim multiple exemptions based on your, or your spouse's or common-law partner's, personal occupancy of the properties.</p>
 		<details>
 			<summary>Section 2 – Election to designate a residential property</summary>
 			<p>Yes to line 300</p>
 			<p>No to line 310</p>
 			<p>Select either yes or no: Electing that you as the owner, designate the residential property (completed in part 2) as either a primary place of residence or for qualifying occupancy.</p>
-			<p>You must fill out this section to be eligible for an exemption.</p>
+			<p>You must fill out this section to be eligible for one of these exemptions.</p>
 		</details>
 
 
@@ -921,7 +922,7 @@ margin-left: 38px;
 			<summary>Section 3 – Joint election to designate a residential property</summary>
 			<p>Yes to line 300</p>
 			<p>Select yes or no: Electing that both you and your spouse or common-law partners, as the owners, designate the residential property (completed in part 2) as either a primary place of residence or for qualifying occupancy.</p>
-			<p>You must fill out this section to be eligible for an exemption.</p>
+			<p>You must fill out this section to be eligible for one of these exemptions.</p>
 			<p> To constitute a valid joint election, your spouse or common-law partner must elect to designate the same residential property for the calendar year in an UHT return for a residential property they own. The election is incomplete until the CRA receives your spouse or common-law partner's portion of the election on their UHT return designating the same residential property</p>
 		</details>
 </li>
@@ -935,21 +936,29 @@ margin-left: 38px;
 
 	
 	<li><h3>Part 4 - Exemption for primary place of residence</h3>
-<p>To qualify for the exemption for primary place of residence, you must file the election in Part 3, Section 2 or 3.</p>
-		
+		<p>Only owners who are <strong>individuals</strong> may qualify for this exemption.</p>
+		<details>
+			<summary>Primary place of residence</summary>
+			<p>This part applies to situations where a dwelling unit that is part of the residential property is occupied by an owner or certain members of the owner's family.</p>
+<p>To be eligible for this exemption, you must file the election in Part 3, Section 2 or 3.</p>
+	</details>	
 </li>
 
 
 	
 	<li><h3>Part 5 - Exemption for qualifying occupancy</h3>
-<p>To qualify for the exemption for qualifying occupancy, you must file the election in Part 3, Section 2 or 3.</p>
+		<details>
+			<summary>Qualifying occupancy</summary>
+			<p>This part applies in situations where your ownership of a residential property has one or more qualifying occupancy periods totalling at least 180 days in the calendar year. When calculating the total days of qualifying occupancy periods in the calendar year, do not include periods of continuous occupancy that are less than a month. Any common days of overlapping qualifying occupancy periods are only counted once.</p>
+<p>To be eligible for this exemption, you must file the election in Part 3, Section 2 or 3.</p>
+	</details>
 		
 </li>
 
 
 	
 		<li><h3>Part 6 - Other exemptions</h3>
-<p>Content</p>
+<p>Complete this section</p>
 </li>
 
 
