--- a/subway/uht/whomust.html
+++ b/subway/uht/whomust.html
@@ -1144,7 +1144,10 @@ margin-left: 38px;
 	      </details>
         </div>
 	  </div>   
-      
+              <h2>Resources</h2>
+      <p><a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/underused-housing-tax-technical-information.html">Technical information</a></p>
+          <p>[Link to <a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/underused-housing-tax-technical-information/underused-housing-tax-notices.html" target="_blank">tax notices</a> landing page instead of tech info]</p>  
+		  <p>[Link to <a href="https://laws-lois.justice.gc.ca/eng/acts/U-0.5/index.html">UHT Act</a>]</p>
  <p><strong>[If you are uncertain about your obligations and liabilities under the Underused Housing Tax Act (UHTA), you may request a ruling or interpretation about how the tax applies to your specific situation.]</strong></p>
 		
 
