--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -878,25 +878,9 @@ margin-left: 38px;
 	<summary>Determine the value of the residential property</summary>
       
 	<p>There are two ways to determine the value of a residential property. The general rule is to use its taxable value. If you want to use its fair market value instead, you must file an election with the Agency.</p>
-      <p>An affected owner electing to use the fair market value of a residential property to calculate Underused Housing Tax owing must get an appraisal of the property. The appraisal report must be prepared by an accredited, professional real estate appraiser operating at arm’s length from the owner. The intended use of the appraisal report must be to assist in the administration of the Underused Housing Tax Act.</p>
-     <p>An owner electing to use fair market value has to get an appraisal of the property. The fair market value of your residential property must be determined by an accredited, professional, real estate appraiser operating at arm’s length to the owner. The intended use of the appraisal report must be to help in the administration of the Underused Housing Tax Act.</p>
-</p>        [Determine <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091881">taxable value</a> vs. <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091884">fair market value</a>] </p>
+       [Determine <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091881">taxable value</a>] </p>
 
-<details>
-	<summary>Acceptable Professional Associations and Designations</summary>
-	<ul>
-		<li>Appraisal Institue of Canada (AIC)</li>
-		<ul><li>Accredited Appraiser Canadian Institute (AACI)</li></ul>
-		<ul><li>Canadian Residential Appraiser (CRA)</li></ul>
-		<li>Canadian National Association of Real Estate Appraisers</li>
-		<ul><li>Designated Appraiser Residential (DAR)</li></ul>
-		<ul><li>Designated Appraiser Commercial (DAC)</li></ul>
-		<li>Ordre des évaluateurs agréés du Québec (OEAQ)</li>
-		<ul><li>Chartered Appraiser (C.App./É.A.)</li></ul>
-	</ul>
-<p>If you have an appraisal report from an appraiser that does not have a designation from one of these associations and need further clarification, please <a href="https://test.canada.ca/cra-arc/subway/uht/contact.html">contact the CRA</a></p>
-	
-</details>
+
 	</details>
 
 </li>
@@ -908,7 +892,9 @@ margin-left: 38px;
 			<summary>Section 1 - Multiple properties</summary>
 			<p>If you own more than one residential property in Canada on December 31, you must file a separate return for each property.</p>
 		</details>
-		<p>If you choose to make an election - You may only elect to designate one residential property for the purposes of subsection 6(10) of the UHTA for a calendar year. You cannot elect to designate different residential properties to claim multiple exemptions based on your, or your spouse's or common-law partner's, personal occupancy of the properties.</p>
+		<br>
+		<p>If you choose to make an election, you may only designate one residential property.</p>
+		<p>You cannot elect to designate different residential properties to claim multiple exemptions based on your, or your spouse's or common-law partner's, personal occupancy of the properties.</p>
 		<details>
 			<summary>Section 2 – Election to designate a residential property</summary>
 			<p>Yes to line 300</p>
@@ -937,10 +923,11 @@ margin-left: 38px;
 	
 	<li><h3>Part 4 - Exemption for primary place of residence</h3>
 		<p>Only owners who are <strong>individuals</strong> may qualify for this exemption.</p>
+		<p>To be eligible for this exemption, you must file the election in Part 3, Section 2 or 3.</p>
 		<details>
 			<summary>Primary place of residence</summary>
 			<p>This part applies to situations where a dwelling unit that is part of the residential property is occupied by an owner or certain members of the owner's family.</p>
-<p>To be eligible for this exemption, you must file the election in Part 3, Section 2 or 3.</p>
+
 	</details>	
 </li>
 
@@ -948,9 +935,10 @@ margin-left: 38px;
 	
 	<li><h3>Part 5 - Exemption for qualifying occupancy</h3>
 		<details>
+			<p>To be eligible for this exemption, you must file the election in Part 3, Section 2 or 3.</p>
 			<summary>Qualifying occupancy</summary>
 			<p>This part applies in situations where your ownership of a residential property has one or more qualifying occupancy periods totalling at least 180 days in the calendar year. When calculating the total days of qualifying occupancy periods in the calendar year, do not include periods of continuous occupancy that are less than a month. Any common days of overlapping qualifying occupancy periods are only counted once.</p>
-<p>To be eligible for this exemption, you must file the election in Part 3, Section 2 or 3.</p>
+
 	</details>
 		
 </li>
@@ -958,22 +946,46 @@ margin-left: 38px;
 
 	
 		<li><h3>Part 6 - Other exemptions</h3>
-<p>Complete this section</p>
+<p>Complete this section if your ownership of the residential property is exempt for reasons other than primary place of residence or qualifying occupancy.</p>
 </li>
 
 
 	
 	<li><h3>Part 7 - Fair market value (FMV) election</h3>
+		<p>If you choose to make a FMV election for this particular residential property, you are electing to use the FMV of your property, instead of its <mark>taxable value</mark>.</p> 
+		
 <p>To calculate the tax you owe using the fair market value of a residential property, you must file an election by completing the section.</p>
 <p>An owner electing to use fair market value has to get an appraisal of the property. The fair market value of your residential property must be determined by an accredited, professional, real estate appraiser operating at arm’s length to the owner. The intended use of the appraisal report must be to help in the administration of the Underused Housing Tax Act.</p>
-	</li>
+	      <p>An affected owner electing to use the fair market value of a residential property to calculate Underused Housing Tax owing must get an appraisal of the property. The appraisal report must be prepared by an accredited, professional real estate appraiser operating at arm’s length from the owner. The intended use of the appraisal report must be to assist in the administration of the Underused Housing Tax Act.</p>
+     <p>An owner electing to use fair market value has to get an appraisal of the property. The fair market value of your residential property must be determined by an accredited, professional, real estate appraiser operating at arm’s length to the owner. The intended use of the appraisal report must be to help in the administration of the Underused Housing Tax Act.</p>
+</p>        [Determine <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091884">fair market value</a>] </p>
+
+<details>
+	<summary>Acceptable Professional Associations and Designations</summary>
+	<ul>
+		<li>Appraisal Institue of Canada (AIC)</li>
+		<ul><li>Accredited Appraiser Canadian Institute (AACI)</li></ul>
+		<ul><li>Canadian Residential Appraiser (CRA)</li></ul>
+		<li>Canadian National Association of Real Estate Appraisers</li>
+		<ul><li>Designated Appraiser Residential (DAR)</li></ul>
+		<ul><li>Designated Appraiser Commercial (DAC)</li></ul>
+		<li>Ordre des évaluateurs agréés du Québec (OEAQ)</li>
+		<ul><li>Chartered Appraiser (C.App./É.A.)</li></ul>
+	</ul>
+<p>If you have an appraisal report from an appraiser that does not have a designation from one of these associations and need further clarification, please <a href="https://test.canada.ca/cra-arc/subway/uht/contact.html">contact the CRA</a></p>
+	
+</details>
+	
+		
+		</li>
 
 	
 
 	
 	<li><h3>Part 8 - Calculation of tax payable</h3>
 	<p>If your ownership of a residential property does not qualify for an exemption from the Underused Housing Tax for a calendar year, you must calculate what you owe for the calendar year.</p>
-	<p>The tax rate of the Underused Housing Tax is 1%. To calculate what you owe, multiply the value of the residential property by the 1% tax rate. Then multiply that result by your ownership percentage of the property.</p>
+	<details>
+		<p>The tax rate of the Underused Housing Tax is 1%. To calculate what you owe, multiply the value of the residential property by the 1% tax rate. Then multiply that result by your ownership percentage of the property.</p>
 		 <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
       <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="text-muted h5">Value of the property</span></li>
       <li><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times </span></span><span class="text-muted h5">Underused Housing Tax rate (1%)</span> </li>
@@ -990,6 +1002,11 @@ margin-left: 38px;
       <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$2,000 (Underused Housing Tax amount for 2023)</span></li>
     </ul>
     </details>
+		
+	</details>
+		
+		
+
 	</li>
 
 
