--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -877,7 +877,7 @@ margin-left: 38px;
 	<details>
 	<summary>Determine the value of the residential property</summary>
       
-	<p>There are two ways to determine the value of a residential property. The general rule is to use its taxable value. If you want to use its fair market value instead, you must file an election with the Agency.</p>
+	<p>There are two ways to determine the value of a residential property. The general rule is to use its taxable value. If you want to use its <mark>fair market value</mark> instead, you must file an election with the Agency.</p>
        [Determine <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091881">taxable value</a>] </p>
 
 
@@ -934,8 +934,9 @@ margin-left: 38px;
 
 	
 	<li><h3>Part 5 - Exemption for qualifying occupancy</h3>
+		<p>To be eligible for this exemption, you must file the election in Part 3, Section 2 or 3.</p>
 		<details>
-			<p>To be eligible for this exemption, you must file the election in Part 3, Section 2 or 3.</p>
+			
 			<summary>Qualifying occupancy</summary>
 			<p>This part applies in situations where your ownership of a residential property has one or more qualifying occupancy periods totalling at least 180 days in the calendar year. When calculating the total days of qualifying occupancy periods in the calendar year, do not include periods of continuous occupancy that are less than a month. Any common days of overlapping qualifying occupancy periods are only counted once.</p>
 
@@ -956,9 +957,7 @@ margin-left: 38px;
 		
 <p>To calculate the tax you owe using the fair market value of a residential property, you must file an election by completing the section.</p>
 <p>An owner electing to use fair market value has to get an appraisal of the property. The fair market value of your residential property must be determined by an accredited, professional, real estate appraiser operating at arm’s length to the owner. The intended use of the appraisal report must be to help in the administration of the Underused Housing Tax Act.</p>
-	      <p>An affected owner electing to use the fair market value of a residential property to calculate Underused Housing Tax owing must get an appraisal of the property. The appraisal report must be prepared by an accredited, professional real estate appraiser operating at arm’s length from the owner. The intended use of the appraisal report must be to assist in the administration of the Underused Housing Tax Act.</p>
-     <p>An owner electing to use fair market value has to get an appraisal of the property. The fair market value of your residential property must be determined by an accredited, professional, real estate appraiser operating at arm’s length to the owner. The intended use of the appraisal report must be to help in the administration of the Underused Housing Tax Act.</p>
-</p>        [Determine <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091884">fair market value</a>] </p>
+	          [Determine <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091884">fair market value</a>] </p>
 
 <details>
 	<summary>Acceptable Professional Associations and Designations</summary>
@@ -984,7 +983,9 @@ margin-left: 38px;
 	
 	<li><h3>Part 8 - Calculation of tax payable</h3>
 	<p>If your ownership of a residential property does not qualify for an exemption from the Underused Housing Tax for a calendar year, you must calculate what you owe for the calendar year.</p>
-	<details>
+	
+		<details>
+<summary>Calculation</summary>
 		<p>The tax rate of the Underused Housing Tax is 1%. To calculate what you owe, multiply the value of the residential property by the 1% tax rate. Then multiply that result by your ownership percentage of the property.</p>
 		 <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
       <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="text-muted h5">Value of the property</span></li>
