--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -954,7 +954,8 @@ margin-left: 38px;
 	
 	<li><h3>Part 7 - Fair market value (FMV) election</h3>
 		<p>If you choose to make a FMV election for this particular residential property, you are electing to use the FMV of your property, instead of its <mark>taxable value</mark>.</p> 
-		
+		<details>
+			<summary>Fair market value</summary>
 <p>To calculate the tax you owe using the fair market value of a residential property, you must file an election by completing the section.</p>
 <p>An owner electing to use fair market value has to get an appraisal of the property. The fair market value of your residential property must be determined by an accredited, professional, real estate appraiser operating at arm’s length to the owner. The intended use of the appraisal report must be to help in the administration of the Underused Housing Tax Act.</p>
 	          [Determine <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091884">fair market value</a>] </p>
@@ -974,7 +975,7 @@ margin-left: 38px;
 <p>If you have an appraisal report from an appraiser that does not have a designation from one of these associations and need further clarification, please <a href="https://test.canada.ca/cra-arc/subway/uht/contact.html">contact the CRA</a></p>
 	
 </details>
-	
+	</details>
 		
 		</li>
 
