--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1025,8 +1025,14 @@
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd></dd>
 
-<dt>Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</dt>
-<dd>Add situation</dd>
+<dt>Self-employment workers</dt>
+<dd> <p><strong>Do not </strong>report self-employment income you paid to a worker who is a:</p>
+<ul>
+	<li>Taxi drivers and drivers of other passenger-carrying vehicles using box 14, use <a href="#cd_82">code 82</a></li>
+	<li>Barber or hairdresser using box 14, use <a href="#cd_83">code 83</a></li>
+	
+</ul>
+</dd>
 
 <dt>Retiring allowances</dt>
 <dd>Add situation</dd>
@@ -1247,41 +1253,48 @@
 
             <details>
             <summary id="bx_18">Box 18&nbsp;– Employee's EI premiums</summary>
-            <p>Report the amount of EI premiums you deducted from your employee. </p>
-            <p>If you report an amount in box 18, you have to report insurable earnings in box 24.</p>
-            <p><strong>Do not </strong>report any amount in box 18 if you did not deduct EI.</p>
+            <p>Report the amount you deducted for your employee's share of the employment insurance (<abbr title="Employment insurance">EI</abbr>) premiums using <strong>box 18</strong> and insurable earnings <a href="#bx_24">box 24</a>. </p>
+                      
             <p><strong>Do not </strong>report the employer's share of EI premiums on the T4 slip.</p>
             <p><strong>Do not </strong>deduct EI premiums from your employee's income or benefits in certain situations. For example, your employee may be EI exempt due to their type of employment or may receive a benefit that is exempt under the Employment Insurance Act. </p>
             <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained.html?utm_campaign=not-applicable&amp;utm_medium=vanity-url&amp;utm_source=canada-ca_cpp-ei-explained">CPP/EI Explained</a> </p>
-            <h4>EI overpayments</h4>
-            <p>If you overdeducted EI premiums from your employee and did not reimburse them, report the total EI premiums (including the overdeducted amount) and the correct insurable earnings on the employee's T4 slip. </p>
-            <p>If you became aware of their EI overdeduction <strong>after you filed their T4 slip</strong>, see <a href="https:/cra-arc/payroll/file/corrections.html">Make corrections after filing</a>. </p>
-            <p>If you become aware of their EI overcontribution <strong>during the same year</strong>, see <a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a></p>
-            <p><strong>Do not </strong>include the reimbursed amount on the T4 slip.</p>
-            <h4>Recovering EI not previously deducted</h4>
-            <p>If you were required to deduct more EI than you withheld from your employee in a previous year and you recovered it through an additional deduction in the current year:</p>
-            <ul>
-            <li>The EI premiums has to be reported on the T4 slip for the year they were required </li>
-            <li><strong>Do not </strong>report the recovered amount on the current year's T4 slip </li>
-            <li>The recovered amount does not affect the current year-to-date EI premiums </li>
-            </ul>
-            <p>Learn more: <a href="/cra-arc/payroll/file/corrections.html">Make corrections after filing</a></p>
-            <h4>Employment in Quebec</h4>
-            <p>The requirements for deducting EI and Quebec Parental Insurance Plan (QPIP) premiums for employees in Quebec are different. </p>
-            <p>Learn more about EI premiums: <a href="/cra-arc/payroll/calculate/when/eirates.html">Learn about EI, the premium rates and maximums</a></p>
-            <p>Learn more about PPIP premiums: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) Premiums | Revenu Québec</a></p>
-
-  <h4>Specific situation</h4>
+       
+  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
+
+<dt>No <abbr title="Employment insurance">EI</abbr> deductions</dt>
+<dd> <p><strong>Do not </strong>report any amount using box 18 if you <strong>did not</strong> deduct <abbr title="Employment insurance">EI</abbr>.</p></dd>
+
+<dt><abbr title="Employment insurance">EI</abbr> overdeductions (overpayment)</dt>
+<dd><p>Report the total <abbr title="Employment insurance">EI</abbr> deductions and the correct insurable earnings using box 18 and insurable earnings <a href="#bx_24">box 24</a> if you overdeducted EI premiums (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
+            <p>Learn more if you over deducted EI premiums:</p> 
+  <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> if you reimbursed them</li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-1">Make corrections after filing</a>. </li>
+        </ul>
+  </dd>
+
+<dt><abbr title="Employment insurance">EI</abbr> underdeductions (recovering)</dt>
+<dd><p><strong>Do not </strong>report any amount using box 18 if you under deducted <abbr title="Employment insurance">EI</abbr> premiums.</p>
+            <p>Learn more if you under deducted EI premiums:</p> 
+  <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> </li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-3">Make corrections after filing</a>. </li>
+        </ul>
+  </dd>
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd></dd>
 
-<dt>Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</dt>
-<dd>Add situation</dd>
+<dt>Self-employment workers</dt>
+<dd> <p><strong>Do not </strong>report self-employment income you paid to a worker who is a:</p>
 
-<dt>Add title</dt>
-<dd>Add situation</dd>
+</dd>
+
+<dt>Province of employment in Quebec</dt>
+<dd> <p>Report the amount you deducted for your employee's share of the reduced employment insurance (<abbr title="Employment insurance">EI</abbr>) premiums using <strong>box 18</strong> and insurable earnings <a href="#bx_24">box 24</a>. </p>
+      <p>Learn more about the:</p>
+<ul><li> Reduced EI premiums: <a href="/cra-arc/payroll/calculate/when/eirates.html#tb2">Quebec EI premium rates and maximums</a></li>
+    <li>PPIP premiums: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) Premiums | Revenu Québec</a></li>
+</ul> </dd>
 </dl>   
 
             </details>
