--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1253,7 +1253,7 @@
 
             <details>
             <summary id="bx_18">Box 18&nbsp;– Employee's EI premiums</summary>
-            <p>Report the amount you deducted for your employee's share of the employment insurance (<abbr title="Employment insurance">EI</abbr>) premiums using <strong>box 18</strong> and insurable earnings <a href="#bx_24">box 24</a>. </p>
+            <p>Report the amount you deducted for your employee's share of the employment insurance (<abbr title="Employment insurance">EI</abbr>) premiums using box 18 <strong>and</strong> <a href="#bx_24">box 24</a>. </p>
                       
             <p><strong>Do not </strong>report the employer's share of EI premiums on the T4 slip.</p>
             <p><strong>Do not </strong>deduct EI premiums from your employee's income or benefits in certain situations. For example, your employee may be EI exempt due to their type of employment or may receive a benefit that is exempt under the Employment Insurance Act. </p>
@@ -1266,7 +1266,7 @@
 <dd> <p><strong>Do not </strong>report any amount using box 18 if you <strong>did not</strong> deduct <abbr title="Employment insurance">EI</abbr>.</p></dd>
 
 <dt><abbr title="Employment insurance">EI</abbr> overdeductions (overpayment)</dt>
-<dd><p>Report the total <abbr title="Employment insurance">EI</abbr> deductions and the correct insurable earnings using box 18 and insurable earnings <a href="#bx_24">box 24</a> if you overdeducted EI premiums (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
+<dd><p>Report the total <abbr title="Employment insurance">EI</abbr> deductions and the correct insurable earnings using box 18 <strong>and</strong> <a href="#bx_24">box 24</a> if you overdeducted EI premiums (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
             <p>Learn more if you over deducted EI premiums:</p> 
   <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> if you reimbursed them</li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-1">Make corrections after filing</a>. </li>
@@ -1285,12 +1285,10 @@
 <dd></dd>
 
 <dt>Self-employment workers</dt>
-<dd> <p><strong>Do not </strong>report self-employment income you paid to a worker who is a:</p>
-
-</dd>
+<dd> Report <strong>only</strong> the self-employed worker's share of <abbr title="Employment insurance">EI</abbr> premiums you deducted using using box 18 <strong>and</strong> <a href="#bx_24">box 24</a>.</dd>
 
 <dt>Province of employment in Quebec</dt>
-<dd> <p>Report the amount you deducted for your employee's share of the reduced employment insurance (<abbr title="Employment insurance">EI</abbr>) premiums using <strong>box 18</strong> and insurable earnings <a href="#bx_24">box 24</a>. </p>
+<dd> <p>Report the amount you deducted for your employee's share of the reduced <abbr title="Employment insurance">EI</abbr> premiums using box 18 and insurable earnings <a href="#bx_24">box 24</a>. </p>
       <p>Learn more about the:</p>
 <ul><li> Reduced EI premiums: <a href="/cra-arc/payroll/calculate/when/eirates.html#tb2">Quebec EI premium rates and maximums</a></li>
     <li>PPIP premiums: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) Premiums | Revenu Québec</a></li>
