--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -850,7 +850,11 @@ margin-left: 38px;
         <p>If you already have a BN, you will have to register your RU program account before you can file your return.</p>
         <p>If you do not have a BN, you must apply for one <strong>and</strong> register your RU program account before you can file your return.</p>
         <p>You can register for your RU program account online through: <a href="https://canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html">How to register for a business number or CRA program account</a></p>
-       <p><strong>[Distinguish how to get an RU #]</strong></p>
+       <strong>Help with applying for a business number</strong>
+		<p>If you are a non-resident corporation and you have a question about obtaining a BN or registering your RU program account, the physical location of your business outside Canada will determine the telephone number that you must use to call the CRA. </p>
+		<p>To determine which phone number is applicable to you, refer to: <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/non-resident-gst-hst-enquiries.html">Non-resident GST/HST Enquiries</a>.</p>
+		
+		<p><strong>[Distinguish how to get an RU #]</strong></p>
 		<p></p>
 	  </details>
 	</details>
