--- a/fhsa/v3/open.html
+++ b/fhsa/v3/open.html
@@ -185,7 +185,7 @@
 <li>any amounts transferred from your RRSPs&nbsp;to the account will be treated as an RRSP withdrawal and must be reported as income on your income tax and benefit return for the year of transfer</li>
 <li>any income earned under the account will not be tax-free and must be reported on your income tax and benefit return for the year it was earned</li>
 </ul> </div>
-<p>When you open your FHSAs, you may want to designate a beneficiary on your account. For more information, go to <a href="/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/death-and-fhsas.html#h_2">Types of beneficiaries</a>.</p>
+<p>When you open your FHSAs, you may want to designate a beneficiary on your account. For more information, go to <a href="death.html#h_2">Types of beneficiaries</a>.</p>
 
 
     
