--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1304,6 +1304,7 @@
 <dd><p><strong>Do not </strong>report any amount using box 18 if the province of employment is outside Canada.</p></dd>
 
 </dl>   
+<p>Learn more on how to determine if you need to deduct EI premiums from benefits and special payments: <a href="/cra-arc/payroll/calculate/index.html">Calculate payroll deductions and contributions</a></p>         
 
             </details>
 
