--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1279,16 +1279,18 @@
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-3">Make corrections after filing</a>. </li>
         </ul>
   </dd>
+<dt>Salary deferral arrangements</dt>
+<dd> Report the amount you deducted from the participant's gross salary (including deferred amounts) while the person was working of the <abbr title="Employment insurance">EI</abbr> premiums using box 18 <strong>and</strong> <a href="#bx_24">box 24</a>.</dd>
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
-<dd><p> Report the <abbr title="Employment insurance">EI</abbr> premiums you deducted from the employee using box 18 <strong>and</strong> <a href="#bx_24">box 24</a>.</p>
-<p>If the worker is self-employed, report <strong>only</strong> the self-employed worker's share of <abbr title="Employment insurance">EI</abbr> premiums you deducted using using box 18 <strong>and</strong> <a href="#bx_24">box 24</a></p>
-<p>Tax-exempt employment income you paid to an enmployee who is registered, or entitled to be registered under the Indian Act is insurable and you must deduct EI premiums.</p>
+<dd><p> Report the amount you deducted for your employee's share of the <abbr title="Employment insurance">EI</abbr> premiums using box 18 <strong>and</strong> <a href="#bx_24">box 24</a>.</p>
+<p>If the worker is self-employed, report <strong>only</strong> the amount you deducted for the self-employed worker's share of <abbr title="Employment insurance">EI</abbr> premiums using using box 18 <strong>and</strong> <a href="#bx_24">box 24</a></p>
+<p>Tax-exempt employment income you paid to an employee who is registered, or entitled to be registered under the Indian Act is insurable and you must deduct EI premiums.</p>
 </dd>
 
 
 <dt>Self-employment workers</dt>
-<dd> Report <strong>only</strong> the self-employed worker's share of <abbr title="Employment insurance">EI</abbr> premiums you deducted using using box 18 <strong>and</strong> <a href="#bx_24">box 24</a>.</dd>
+<dd> Report <strong>only</strong> the amount you deducted for the self-employed worker's share of <abbr title="Employment insurance">EI</abbr> premiums using using box 18 <strong>and</strong> <a href="#bx_24">box 24</a>.</dd>
 
 <dt>Province of employment in Quebec</dt>
 <dd> <p>Report the amount you deducted for your employee's share of the reduced <abbr title="Employment insurance">EI</abbr> premiums using box 18 and insurable earnings <a href="#bx_24">box 24</a>. </p>
@@ -1297,13 +1299,11 @@
     <li>PPIP premiums: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) Premiums | Revenu Québec</a></li>
 </ul> </dd>
 
-<dt>Salary deferral arrangements</dt>
-<dd> Report the <abbr title="Employment insurance">EI</abbr> premiums you deducted from the participant's gross salary (including deferred amounts) while the person was working using box 18 <strong>and</strong> <a href="#bx_24">box 24</a>.</dd>
-
 <dt>Province of employment outside Canada</dt>
 <dd><p><strong>Do not </strong>report any amount using box 18 if the province of employment is outside Canada.</p></dd>
 
 </dl>   
+
 <p>Learn more on how to determine if you need to deduct EI premiums from benefits and special payments: <a href="/cra-arc/payroll/calculate/index.html">Calculate payroll deductions and contributions</a></p>         
 
             </details>
