--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1252,7 +1252,7 @@
 		<li class="code-num">
 
             <details>
-            <summary id="bx_18">Box 18&nbsp;– Employee's EI premiums</summary>
+            <summary id="bx_18">Box 18&nbsp;– Employee's EI premiums <span class="label label-warning">Jeremiah</span></summary>
             <p>Report the amount you deducted for your employee's share of the employment insurance (<abbr title="Employment insurance">EI</abbr>) premiums using box 18 <strong>and</strong> <a href="#bx_24">box 24</a>. </p>
                       
             <p><strong>Do not </strong>report the employer's share of EI premiums on the T4 slip.</p>
