--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -797,12 +797,12 @@ margin-left: 38px;
 		
 	  
 		  <p>If you are an <strong>affected owner</strong> of a residential property in Canada on December 31, <strong>you must file</strong> an Underused Housing Tax return for the calendar year.</p>
-		<p>If you own more than one residential property in Canada, you must file a separate return for each property</p>
+		<p>If you own more than one residential property in Canada, you must file a separate return for each property.</p>
 		 <p>You must still file a return even if your ownership of the property qualifies for an exemption and you do not owe any tax.</p>
 		
 
 	        <h2>Filling out the return</h2>
-<p>Follow the steps below to help you fill out the sections of your return. </p>
+<p>Follow the steps below to help you fill out the parts of your return. </p>
 <h3>What return form to use</h3>
 <ul class="fa-ul">
 <li><span class="far fa-file-alt fa-lg fa-li"></span><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/uht-2900.html" target="_blank">UHT-2900, Underused Housing Tax Return and Election Form</a></li>
@@ -891,7 +891,7 @@ margin-left: 38px;
 
 	
 	<li><h3>Part 3 - Multiple residential properties</h3>
-<p>This section only applies to <strong>individuals</strong> who are not Canadian citizens or permanent residents, and who own more than one residential property.</p>
+<p>This part only applies to <strong>individuals</strong> who are <strong>not</strong> Canadian citizens or permanent residents, and who own more than one residential property.</p>
 		<details>
 			<summary>Section 1 - Multiple properties</summary>
 			<p>If you own more than one residential property in Canada on December 31, you must file a separate return for each property.</p>
@@ -951,13 +951,13 @@ margin-left: 38px;
 
 	
 		<li><h3>Part 6 - Other exemptions</h3>
-<p>Complete this section if your ownership of the residential property is exempt for reasons other than primary place of residence or qualifying occupancy.</p>
+<p>Complete this part if your ownership of the residential property is exempt for reasons other than primary place of residence or qualifying occupancy.</p>
 </li>
 
 
 	
 	<li><h3>Part 7 - Fair market value (FMV) election</h3>
-		<p>If you choose to make a FMV election for this particular residential property, you are electing to use the FMV of your property, instead of its <mark>taxable value</mark>.</p> 
+		<p>If you choose to make a FMV election for a particular residential property, you are electing to use the FMV of your property, instead of its <mark>taxable value</mark>.</p> 
 		<details>
 			<summary>Fair market value</summary>
 <p>To calculate the tax you owe using the fair market value of a residential property, you must file an election by completing the section.</p>
@@ -987,25 +987,26 @@ margin-left: 38px;
 
 	
 	<li><h3>Part 8 - Calculation of tax payable</h3>
-	<p>If your ownership of a residential property does not qualify for an exemption from the Underused Housing Tax for a calendar year, you must calculate what you owe for the calendar year.</p>
+	<p>If your ownership of a residential property does not qualify for an exemption from the tax for a calendar year, you must calculate what you owe.</p>
 	
 		<details>
 <summary>Calculation</summary>
-		<p>The tax rate of the Underused Housing Tax is 1%. To calculate what you owe, multiply the value of the residential property by the 1% tax rate. Then multiply that result by your ownership percentage of the property.</p>
+		<p>The Underused Housing Tax rate is 1%.</p>
+			<p>To calculate what you owe, multiply the value of the residential property by the 1% tax rate. Then multiply that result by your ownership percentage of the property.</p>
 		 <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
       <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="text-muted h5">Value of the property</span></li>
       <li><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times </span></span><span class="text-muted h5">Underused Housing Tax rate (1%)</span> </li>
-      <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times </span></span><span class="text-muted h5">Ownership percentage</span></li>
-      <li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">Underused Housing Tax amount</span><span class="fa-stack text-success pull-right"><span class="fas fa-circle fa-stack-2x"></span><span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span></span></li>
+      <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times </span></span><span class="text-muted h5">Your ownership percentage</span></li>
+      <li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">Underused Housing Tax amount owed</span><span class="fa-stack text-success pull-right"><span class="fas fa-circle fa-stack-2x"></span><span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span></span></li>
     </ul>
     <details>
     <summary>Calculation example</summary>
-    <p>If the value of the residental property is $500,000 and you have a 50% ownership for the year 2023.</p>
+    <p>In 2023, the value of the residental property is $500,000. You are 1 of 2 owners, who equally share ownership as indicated in the land registration system.</p>
    <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
-      <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$500,000 (value of the property)</span></li>
+      <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$500,000 (Value of the property)</span></li>
       <li><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">1% (Underused Housing Tax rate)</span> </li>
-      <li class="brdr-bttm"><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">50% (Ownership percentage)</span></li>
-      <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$2,000 (Underused Housing Tax amount for 2023)</span></li>
+      <li class="brdr-bttm"><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">50% (Your ownership percentage)</span></li>
+      <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$2,000 (Underused Housing Tax amount owed for 2023)</span></li>
     </ul>
     </details>
 		
