--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -797,8 +797,8 @@ margin-left: 38px;
 		
 	  
 		  <p>If you are an <strong>affected owner</strong> of a residential property in Canada on December 31, <strong>you must file</strong> an Underused Housing Tax return for the calendar year.</p>
-		<p>If you own more than one residential property in Canada, you must file a separate return for each property.</p>
-		 <p>You must still file a return even if your ownership of the property qualifies for an exemption and you do not owe any tax.</p>
+		<p>If you own more than one residential property in Canada, <strong>you must file</strong> a separate return for each property. If you share ownership of a residential property, <strong>each of you must file</strong> a separate return for the property.</p>
+		 <p>You <strong>must</strong> still file a return even if your ownership of the property qualifies for an exemption and you do not owe any tax.</p>
 		
 
 	        <h2>Filling out the return</h2>
