--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -992,7 +992,7 @@ margin-left: 38px;
 		<details>
 <summary>Calculation</summary>
 		<p>The Underused Housing Tax rate is 1%.</p>
-			<p>To calculate what you owe, multiply the value of the residential property by the 1% tax rate. Then multiply that result by your ownership percentage of the property.</p>
+			<p>To calculate what you owe, multiply the value of the residential property by the tax rate. Then multiply that result by your ownership percentage of the property.</p>
 		 <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
       <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="text-muted h5">Value of the property</span></li>
       <li><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times </span></span><span class="text-muted h5">Underused Housing Tax rate (1%)</span> </li>
